@@ -1,3 +1,13 @@
+2016-10-01  Titus Brown  <t@Titus-MacBook-Air-3.local>
+
+  * lib/hashtable.{cc,hh}: added assemble_linear_path function & helpers.
+   * khmer/_khmer.cc: CPython API for assemble_linear_path.
+   * tests/test_nodegraph.py: tests for new assemble_linear_path behavior.
+
+   * khmer/khmer_args.py, tests/test_script_arguments.py: fix some lingering
+  PEP 8 errors.
+   * lib/kmer_hash.hh: added string -> string _revcomp function.
+
 2016-09-30  Daniel Standage  <daniel.standage@gmail.com>
 
    * scripts/trim-low-abund.py, khmer/utils.py, doc/dev/development.rst: moved
